--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body
 	background-color: white;
 	width: 600px;
 	padding: 50px;
-	height: 400px;
+	height: 420px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 80px;
@@ -95,6 +95,7 @@ input[type=submit]
 	font-size:20px;
 	color: black;
 	margin-top: 10px;
+	margin-bottom: 10px;
 	border: none;
 	border-radius: 5px;
 	cursor: pointer;
@@ -121,3 +122,33 @@ a:hover
 	text-align: center;
 	margin-top: 15px;
 }
+
+.tile1
+{
+	margin-right: 50px;
+	margin-left:50px;
+	margin-bottom:10px;
+	margin-top:10px;
+	width: 200px;
+	height: 90px;
+	padding-top:10px;
+	background-color: #438c6f;
+	float: left;
+	text-align: center;
+	border-radius: 5px;
+	overflow: hidden;
+}
+
+.tile1:hover tilelink
+{
+	background-color: #327b5e;
+	-webkit-transform: scale(1.15);
+	-ms-transform: scale(1.15);
+	transform: scale(1.15);
+}
+
+.tile1 tilelink
+{
+	transition: all 0.5s ease-in-out;
+}
+
