--- a/style.css
+++ b/style.css
@@ -19,7 +19,20 @@ body
 	background-color: white;
 	width: 960px;
 	padding: 20px;
-	height: 410px;
+	height: 500px;
+	margin-left: auto;
+	margin-right: auto;
+	-webkit-box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
+	-moz-box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
+	box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
+}
+
+#container1
+{
+	background-color: white;
+	width: 960px;
+	padding: 20px;
+	height: 350px;
 	margin-left: auto;
 	margin-right: auto;
 	-webkit-box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
@@ -213,12 +226,15 @@ ul > li:hover > a
 	color: #105a3d;
 }
 
-section
+#section1
 {
-	width: 100%;
-	height: 100%px;
+	width: 60%;
+	height: 360px;
+	margin-left: 200px;
+	margin-top:10px;
 	background-color: #e9f3e9;
 	color: black;
+	text-align: center;
 }
 
 .col
@@ -231,7 +247,15 @@ section
 
 .row
 {
-	margin: 10px;
+	margin-left: 40px;
+	margin-top: 40px;
+}
+
+.row1
+{
+	width: 500px;
+	margin-left: 400px;
+
 }
 
 #comment
@@ -252,15 +276,17 @@ input[type=date]
 	margin-top:10px;
 }
 
-input[type=radio]
+#category
 {
-	width: 50px;
-	background-color: #e9f3e9;
+	width: 120px;
+	background-color: white;
 	border: none;
 	border-radius: 5px;
-	font-size: 20px;
+	font-size: 15px;
 	box-sizing: border-box;
 	outline: none;
+	margin-top:10px;
+	text-align: center;
 }
 
 #payment
@@ -273,9 +299,10 @@ input[type=radio]
 	box-sizing: border-box;
 	outline: none;
 	margin-top:10px;
+		text-align: center;
 }
 
-.row input[type=submit],
+.row1 input[type=submit],
 input[type=reset]
 {
 	width: 100px;
@@ -289,6 +316,74 @@ input[type=reset]
 	letter-spacing: 1px;
 	outline: none;
 	text-align: center;
-	margin-left: 250px;
 }
 
+.dropbtn {
+  background-color: #438c6f;
+  color: black;
+  padding: 10px;
+  font-size: 15px;
+  border: none;
+    min-width: 200px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  width:100%;
+  height:30px;
+  margin-top:10px;
+
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  font-size: 15px;
+  background-color: #f1f1f1;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover
+ {
+	background-color: #327b5e;
+	color: #105a3d; 
+}
+
+.dropdown:hover .dropdown-content 
+{
+	display: block;
+}
+
+.dropdown:hover .dropbtn 
+{
+	background-color: #327b5e;
+	color: #105a3d;
+}
+
+.table
+{
+	margin-top:50px;
+	float: left;
+	width:46%;
+	text-align:justify;
+	display: block;
+	overflow-x: auto;
+    border-spacing: 0;
+}
+
+th,
+td {
+    padding: 5px 10px;
+    border-top-width: 0;
+    border-left-width: 0;
+}
