--- a/style.css
+++ b/style.css
@@ -2,19 +2,116 @@ body
 {
 	/* Background pattern from subtlepatterns.com */
 	background-image: url("img/hexellence.png");
-	font-size: 20px;
+	font-size: 16px;
 	font-family: 'Lato', sans-serif;
-	width: 100%;
+    text-align: center;
+    margin-bottom: 60px;
 }
 
-.logo
+#mainButton {
+    text-decoration: none;
+    color: #404040;
+}
+
+#title
 {
 	font-size: 40px;
 	font-weight: 700;
 	letter-spacing: 5px;
 }
 
-#container
+#logo{
+	color:#a5be00;
+}
+
+#subtitle {
+    font-weight: 400;
+    letter-spacing: 3px;
+}
+
+.userInput {
+    font-size: 1.2em;
+    background-color: white;
+    border: 1px solid #cccccc;
+    border-radius: 3px !important;
+    box-sizing: border-box;
+}
+
+.inputIcon {
+    font-size: 1.2em;
+    border: 1px solid #cccccc;
+    border-radius: 3px;
+    background-color: #a5be00;
+}
+
+.userInput:focus {
+    outline: none !important;
+    border: 2px solid #b3b3b3;
+    box-shadow: 0 0 10px #b3b3b3;
+}
+
+.signButton {
+    background-color: #a5be00;
+    letter-spacing: 1px;
+    border-style: none;
+}
+
+.signButton:hover {
+    background-color: #a14da0;
+}
+
+.footer {
+    font-size: 0.9em;
+    position: absolute;
+    bottom: 0;
+}
+
+.mainmenu{
+	font-weight: 400;
+    letter-spacing: 3px;
+	color:#a5be00;
+}
+
+.mainmenu span {
+	color: black;
+}
+
+a
+{
+	text-decoration: none;
+	color: #a5be00;	
+}
+
+a:hover
+{
+	color:  #a14da0;
+}
+
+.square {
+    text-align: center;
+    background: white;
+    border-radius: 10px;
+}
+
+#mainNavbar {
+    font-size: 1.5rem;
+    font-weight: 100;    
+}
+
+#mainNavbar .nav-link {
+    color: white;
+}
+
+#mainNavbar .nav-link:hover {
+    color: #EA1C2C;
+}
+
+#mainNavbar .navbar-brand {
+    color: #EA1C2C;
+    font-size: 1.5rem;
+}
+
+/*#container
 {
 	background-color: white;
 	width: 960px;
@@ -25,9 +122,9 @@ body
 	-webkit-box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
 	-moz-box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
 	box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
-}
+}*/
 
-#container1
+/*#container1
 {
 	background-color: white;
 	width: 960px;
@@ -38,19 +135,12 @@ body
 	-webkit-box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
 	-moz-box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
 	box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
-}
+}*/
 
-header
-{
-	padding: 20px;
-	font-size: 20px;
-	font-weight: 400;
-	color: black;
-	text-align: center;
-	letter-spacing: 3px;
-}
 
-input[type=text],
+
+
+/*input[type=text],
 input[type=password]
 {
 	width: 300px;
@@ -63,9 +153,9 @@ input[type=password]
 	box-sizing: border-box;
 	outline: none;
 	margin-top: 10px;
-}
+}*/
 
-input[type=text]:focus,
+/*input[type=text]:focus,
 input[type=password]:focus
 {
 	-webkit-box-shadow: 0px 0px 10px 2px rgba(204,204,204,0.9);
@@ -74,18 +164,18 @@ input[type=password]:focus
 	border: 2px solid #327b5e;
 	background-color: #e9f3e9;
 	color: #428c42;
-}
+}*/
 
-.info
+/*.info
 {
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
 	padding: 20px;
 	font-size: 15px;
-}
+}*/
 
-.icon
+/*.icon
 {
 	float: left;
 	text-align: center;
@@ -98,9 +188,9 @@ input[type=password]:focus
 	outline: none;
 	margin-top: 10px;
 	margin-left: 310px;
-}
+}*/
 
-.icon1
+/*.icon1
 {
 	float: left;
 	text-align: center;
@@ -130,19 +220,10 @@ input[type=submit]
 	letter-spacing: 1px;
 	outline: none;
 	text-align: center;
-}
+}*/
 
-a
-{
-	color:  black;
-	text-decoration: none;
-}
 
-a:hover
-{
-	color: #327b5e;
-}
-
+/*
 .text
 {
 	font-size: 15px;
@@ -386,4 +467,4 @@ td {
     padding: 5px 10px;
     border-top-width: 0;
     border-left-width: 0;
-}
+}*/
