--- a/style.css
+++ b/style.css
@@ -106,388 +106,177 @@ a:hover
 		 font-size: 0.9rem;
 }
 
-
-
-
-/*#mainNavbar {
-    font-size: 1.5rem;
-    font-weight: 100;    
-}
-
-#mainNavbar .nav-link {
-    color: white;
-}
-
-#mainNavbar .nav-link:hover {
-    color: #EA1C2C;
-}
-
-#mainNavbar .navbar-brand {
-    color: #EA1C2C;
-    font-size: 1,0 rem;
-}*/
-
 .menu {
     text-align: center;
     background-color: #a5be00;
 }
 
-
-
-/*#container
-{
-	background-color: white;
-	width: 960px;
-	padding: 20px;
-	height: 500px;
-	margin-left: auto;
-	margin-right: auto;
-	-webkit-box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
-	-moz-box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
-	box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
-}*/
-
-/*#container1
-{
-	background-color: white;
-	width: 960px;
-	padding: 20px;
-	height: 350px;
-	margin-left: auto;
-	margin-right: auto;
-	-webkit-box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
-	-moz-box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
-	box-shadow: 3px 3px 30px 5px rgba(204,204,204,0.9);
-}*/
-
-
-
-
-/*input[type=text],
-input[type=password]
-{
-	width: 300px;
-	background-color: #efefef;
-	color: #438c6f;
-	border: 2px solid #ddd;
-	border-radius: 5px;
-	font-size: 20px;
-	padding: 10px;
-	box-sizing: border-box;
-	outline: none;
-	margin-top: 10px;
-}*/
-
-/*input[type=text]:focus,
-input[type=password]:focus
-{
-	-webkit-box-shadow: 0px 0px 10px 2px rgba(204,204,204,0.9);
-	-moz-box-shadow: 0px 0px 10px 2px rgba(204,204,204,0.9);
-	box-shadow: 0px 0px 10px 2px rgba(204,204,204,0.9);
-	border: 2px solid #327b5e;
-	background-color: #e9f3e9;
-	color: #428c42;
-}*/
-
-/*.info
-{
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
-	padding: 20px;
-	font-size: 15px;
-}*/
-
-/*.icon
-{
-	float: left;
-	text-align: center;
-	background-color: #438c6f;
-	width: 40px;
-	height: 47px;
-	border-radius: 5px;
-	padding-top:10px;
-	box-sizing: border-box;
-	outline: none;
-	margin-top: 10px;
-	margin-left: 310px;
-}*/
-
-/*.icon1
-{
-	float: left;
-	text-align: center;
-	background-color: #438c6f;
-	width: 40px;
-	height: 47px;
-	border-radius: 5px;
-	padding-top:10px;
-	box-sizing: border-box;
-	outline: none;
-	margin-top: 30px;
-	margin-left: 360px;
+.navbar-toggler {
+    background-color: #a14da0;
+    outline: none;
 }
 
-input[type=submit]
-{
-	width: 200px;
-	height: 47px;
-	background-color: #efefef;
-	font-size:20px;
-	color: black;
-	margin-top: 30px;
-	margin-bottom: 10px;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-	letter-spacing: 1px;
-	outline: none;
-	text-align: center;
-}*/
-
-
-/*
-.text
-{
-	font-size: 15px;
-	color: black;
-	text-align: center;
-	margin-top: 15px;
+.navbar-toggler:focus {
+    outline: none;
 }
 
-.rectangle
-{
-	width: 100%;
-	height: 40%;
-	margin: 0;
-	text-align: center;
+ul > li.nav-item {
+    background-color: transparent;
+    border-radius: 5px;
 }
 
-.tile1
-{
-	margin-left: 145px;
-	margin-right: 145px;
-	margin-top: 60px;
-	width: 180px;
-	height: 90px;
-	background-color: #438c6f;
-	float: left;
-	text-align: center;
-	border-radius: 5px;
-	overflow: hidden;
+
+select{
+	border: 1px solid #cccccc;
+    border-radius: 3px;
 }
 
-.topnav
-{ 
-	width: 100%;
-	background-color: #438c6f;
-	text-align: center;
-	border-top: 1px solid #549d7f;
-	border-bottom: 1px solid #549d7f;
-	padding: 0;
-	margin-left: 0;
+
+select:focus{
+	border: 1px solid #a5be00;
+    border-radius: 3px;
 }
 
-ul
-{
-	padding: 0;
-	margin: 0;
-	list-style-type: none;
-	font-size: 15px;
-	height: 30px;
-	line-height: 200%;
-	display: inline-block;
-
+input[type=text]:hover,
+input[type=email]:hover,
+input[type=password]:hover,
+textarea:hover,
+input[type=date]:hover{
+	border: 1px solid #a5be00;
+    border-radius: 3px;	
 }
 
-ul a
-{
-	color: black;
-	text-decoration: none;
-	display: block;
+
+.dateButton > button {
+    background-color: #a5be00;
+    border-radius: 3px;
 }
 
-ul > li
-{
-	float: left;
-	width: 186px;
-	height: 30px;
-	border-right: 1px dashed #751b1b;
+.dateButton > button:hover,
+ul > li.nav-item:hover {
+    -webkit-box-shadow: 0px 0px 11px 2px #a14da0;
+    -moz-box-shadow: 0px 0px 11px 2px #a14da0;
+    box-shadow: 0px 0px 11px 2px #a14da0;
 }
 
-ul > li:first-child
-{
-	border-left: 1px dashed #751b1b;
+
+th {
+    text-align: left;
+    font-size: 1.05em;
+    overflow: hidden;
+    overflow-wrap: normal;
+    border-bottom: 1px solid #b3b3b3;
 }
 
-ul > li:hover
-{
-	background-color: #327b5e;
+td.amount,
+td.sum,
+td.date {
+    white-space: nowrap;
 }
 
-ul > li:hover > a
-{
-	color: #105a3d;
-}
-
-#section1
-{
-	width: 60%;
-	height: 360px;
-	margin-left: 200px;
-	margin-top:10px;
-	background-color: #e9f3e9;
-	color: black;
-	text-align: center;
-}
-
-.col
-{
-	display: inline-block;
-	margin: 0 10px;
-	font-size: 15px;
-	color: black;
-}
-
-.row
-{
-	margin-left: 40px;
-	margin-top: 40px;
-}
-
-.row1
-{
-	width: 500px;
-	margin-left: 400px;
-
-}
-
-#comment
-{
-	width: 80%;
-}
-
-input[type=number],
-input[type=date]
-{
-	width: 120px;
-	background-color: white;
-	border: none;
-	border-radius: 5px;
-	font-size: 15px;
-	box-sizing: border-box;
-	outline: none;
-	margin-top:10px;
-}
-
-#category
-{
-	width: 120px;
-	background-color: white;
-	border: none;
-	border-radius: 5px;
-	font-size: 15px;
-	box-sizing: border-box;
-	outline: none;
-	margin-top:10px;
-	text-align: center;
-}
-
-#payment
-{
-	width: 120px;
-	background-color: white;
-	border: none;
-	border-radius: 5px;
-	font-size: 15px;
-	box-sizing: border-box;
-	outline: none;
-	margin-top:10px;
-		text-align: center;
-}
-
-.row1 input[type=submit],
-input[type=reset]
-{
-	width: 100px;
-	height: 20px;
-	background-color: #438c6f;
-	font-size: 15px;
-	color: black;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-	letter-spacing: 1px;
-	outline: none;
-	text-align: center;
-}
-
-.dropbtn {
-  background-color: #438c6f;
-  color: black;
-  padding: 10px;
-  font-size: 15px;
-  border: none;
-    min-width: 200px;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-  width:100%;
-  height:30px;
-  margin-top:10px;
-
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  font-size: 15px;
-  background-color: #f1f1f1;
-  min-width: 200px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover
- {
-	background-color: #327b5e;
-	color: #105a3d; 
-}
-
-.dropdown:hover .dropdown-content 
-{
-	display: block;
-}
-
-.dropdown:hover .dropbtn 
-{
-	background-color: #327b5e;
-	color: #105a3d;
-}
-
-.table
-{
-	margin-top:50px;
-	float: left;
-	width:46%;
-	text-align:justify;
-	display: block;
-	overflow-x: auto;
-    border-spacing: 0;
-}
-
-th,
 td {
-    padding: 5px 10px;
-    border-top-width: 0;
-    border-left-width: 0;
-}*/
+    text-align: left;
+    font-size: 0.85em;
+    border-right: 1px solid #b3b3b3;
+}
+
+td.comment {
+    border: none;
+}
+
+tr {
+    display: none;
+}
+
+tr.header {
+    display: table-row;
+    cursor: pointer;
+}
+
+tr.summary > td {
+    font-size: 0.95em;
+    font-weight: 700;
+    border: none;
+}
+
+.amount,
+td.sum {
+    text-align: right;
+}
+
+tr:last-child {
+    color: #a5be00;
+    display: table-row !important;
+}
+
+.box {
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 5px;
+}
+
+#balance {
+    font-weight: 700;
+}
+
+#result {
+    font-size: 1.2em;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+}
+
+.timePeriod {
+    position: relative;
+}
+
+.dateButton > button:focus {
+    box-shadow: none;
+}
+
+.modal {
+    min-width: 300px;
+    overflow:  auto;
+}
+
+.option {
+    border-radius: 5px;
+    line-height: 1.3;
+    font-size: 0.95em;
+    letter-spacing: 0.5px;
+    background-color: rgba(242, 242, 242, 0.5);
+    -webkit-box-shadow: 7px 10px 21px -16px rgba(17,18,17,1);
+    -moz-box-shadow: 7px 10px 21px -16px rgba(17,18,17,1);
+    box-shadow: 7px 10px 21px -16px rgba(17,18,17,1);
+}
+
+
+
+.limit {
+    background-color: #dcefeb;
+    border-top: 0px !important;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+}
+
+.limitInfo {
+    font-size: 0.85em;
+    background: #ffb3b3;
+    /*background: #aaff80;*/
+}
+
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    ul.navbar-nav > li {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+}
+
+@media (max-width: 767px) {
+    #title {
+        font-size: 2.5em;
+    }
+}
+
+
